test/spec_vectors/call/fail/module_13.wat
(module (func $type-first-empty-in-loop (loop (call 1))) (func (param i32)))